--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "gasoline",
-  "version": "0.1.0",
+  "version": "0.2.0",
   "description": "a SPA example based on SolidJS and Google Apps Script.",
   "scripts": {
     "start": "vite",
@@ -10,6 +10,9 @@
   },
   "license": "MIT",
   "devDependencies": {
+    "autoprefixer": "^10.4.7",
+    "postcss": "^8.4.14",
+    "tailwindcss": "^3.1.6",
     "typescript": "^4.7.4",
     "vite": "^3.0.0",
     "vite-plugin-solid": "^2.3.0"
