--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "gasoline",
-  "version": "0.2.0",
+  "version": "0.3.0",
   "description": "a SPA example based on SolidJS and Google Apps Script.",
   "scripts": {
     "start": "vite",
@@ -15,6 +15,7 @@
     "tailwindcss": "^3.1.6",
     "typescript": "^4.7.4",
     "vite": "^3.0.0",
+    "vite-plugin-singlefile": "^0.11.0",
     "vite-plugin-solid": "^2.3.0"
   },
   "dependencies": {
