--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "gasoline",
-  "version": "0.4.0",
+  "version": "0.5.0",
   "description": "a SPA example based on SolidJS and Google Apps Script.",
   "scripts": {
     "start": "vite",
@@ -10,15 +10,18 @@
   },
   "license": "MIT",
   "devDependencies": {
+    "@google/clasp": "^2.4.1",
     "autoprefixer": "^10.4.7",
     "postcss": "^8.4.14",
     "tailwindcss": "^3.1.6",
+    "tslint": "^6.1.3",
     "typescript": "^4.7.4",
     "vite": "^3.0.0",
     "vite-plugin-singlefile": "^0.11.0",
     "vite-plugin-solid": "^2.3.0"
   },
   "dependencies": {
+    "@types/google-apps-script": "^1.0.53",
     "solid-js": "^1.4.7"
   }
 }
